[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/theme_lerimama.tres" type="Theme" id=1]
[ext_resource path="res://game/gui/publish_popup.gd" type="Script" id=2]

[node name="PublishPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.321569, 0.0392157, 0.0392157, 1 )

[node name="Confirm" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -34.0
margin_right = 152.0
margin_bottom = -12.0
grow_horizontal = 2
theme = ExtResource( 1 )
text = "Publish online?"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -3.0
margin_right = 37.0
margin_bottom = 37.0
grow_horizontal = 2
custom_constants/separation = 32

[node name="SkipBtn" type="Button" parent="HBoxContainer"]
margin_right = 52.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 1 )
text = "SKIP"
align = 0

[node name="PublishBtn" type="Button" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 178.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 1 )
text = "PUBLISH"
align = 0

[connection signal="pressed" from="HBoxContainer/SkipBtn" to="." method="_on_SkipBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/PublishBtn" to="." method="_on_PublishBtn_pressed"]
